--- a/main.css
+++ b/main.css
@@ -1,29 +1,60 @@
 html {
-  background-color: #116466;
+  margin: 0;
+}
+body {
+  background-color: #2C3531;
 }
 
 #mainHead {
-  height: 300px;
+  background-color: #116466;
 }
 
-/* .container {
-  background-color: #2C3531;
+h1 {
+  text-align: center;
+  color: #FFCB9A;
+  text-decoration: underline;
+}
+
+/* #wrapper {
+  background-color: #116466;
 } */
 
+.container {
+  padding-top: 200px;
+}
 
-img {
+
+.img-dsc {
+  text-align: center;
+  color: #FFCB9A;
+  font-size: 1.3em;
+  font-family: sans-serif;
+}
+
+
+div > img {
   width: 100%;
   height: auto;
   border: 3px solid #FFCB9A;
 }
 
 
+.blue {
+  background-image: url("https://images.all-free-download.com/images/graphiclarge/nostalgic_blue_background_03_hd_picture_169784.jpg");
+}
+
+.purple {
+  background-image: url("https://i.ytimg.com/vi/SLtM4OObCp4/maxresdefault.jpg");
+}
+
+.red {
+  background-image: url("https://image.freepik.com/free-vector/red-background-with-diamond-effect_23-2147618257.jpg");
+}
 
 
-
-
-
-
+div img:hover {
+  transform: scale(1.1);
+}
 
 
 
