pokemon requests with ajax

--- a/main.css
+++ b/main.css
@@ -6,18 +6,10 @@ body {
 }
 
 #mainHead {
-  background-color: #116466;
+  display: flex;
+  justify-content: center;
 }
 
-h1 {
-  text-align: center;
-  color: #FFCB9A;
-  text-decoration: underline;
-}
-
-/* #wrapper {
-  background-color: #116466;
-} */
 
 .container {
   padding-top: 200px;
@@ -32,10 +24,10 @@ h1 {
 }
 
 
-div > img {
+.blue, .purple, .red {
   width: 100%;
   height: auto;
-  border: 3px solid #FFCB9A;
+  border: 2px solid #FFCB9A;
 }
 
 
@@ -52,7 +44,7 @@ div > img {
 }
 
 
-div img:hover {
+div .blue:hover, .purple:hover, .red:hover {
   transform: scale(1.1);
 }
 
