added some shit

--- a/master.scss
+++ b/master.scss
@@ -6,7 +6,7 @@ body {
   background-image: url("https://wallpaper.wiki/wp-content/uploads/2017/05/HD-desktop-nebula-backgrounds.jpg");
 }
 
-/* ==========LOGO / CONTAINER FOR GRID / Button Hover=========== */
+/* =========================== */
 
 #mainHead {
   display: flex;
@@ -50,18 +50,18 @@ div .btn1:hover, .btn2:hover, .btn3:hover {
 
 #sprite {
   height: 200px;
-  width: auto;
-  margin-top: 55px;
+  width: auto;;
 }
 
 
-#stats {
-  margin-top: 60px;
-}
 
-/* =========TEXT========= */
 
-#stats {
-  font-family: VT323;
-  font-size: 1.1em;
-}
+
+
+/*
+#2C3531 == Charcoal Grey
+#116466 == Ocean Blue
+#D9B08C == Light brown/grey
+#FFCB9A == Peach
+#D1E8E2 == Baby Blue
+*/
